# audio

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
audio/: OnSendAudioDataToDevice.h  _audio.c  audio.h  audiodevice.c  config.h  deviceid.c  deviceinfo.c  deviceinfo.cpp  deviceinfoiterator.c  miniaudio.c  music.c  raudio.c  sound.c  wave.c
include/: miniaudio.h  raudio.h
src/: audio.py  audio.pyi
src/audio/: __init__.py  __init__.pyi
test/: audio_devices.py  device.py  music.py  sound.py  wave.py
